Update index.html with comprehensive SEO meta tags, Open Graph, and Twitter card data for Cashvertz launch. Enhance performance with preconnect links and structured data for better search engine visibility.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,89 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React App</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary Meta Tags -->
+  <title>Cashvertz - Earn While You Shop</title>
+  <meta name="title" content="Cashvertz - Earn While You Shop" />
+  <meta name="description"
+    content="Revolutionary cashback shopping platform launching October 21, 2025. Earn money while you shop from your favorite brands. Join the waitlist for exclusive early access!" />
+  <meta name="keywords"
+    content="cashback, shopping, earn money, rewards, online shopping, cashback app, shopping rewards, money back, discount shopping, Cashvertz" />
+  <meta name="author" content="Cashvertz" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="English" />
+  <meta name="revisit-after" content="7 days" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://cashvertz.com/" />
+  <meta property="og:title" content="Cashvertz - Earn While You Shop" />
+  <meta property="og:description"
+    content="Revolutionary cashback shopping platform launching October 21, 2025. Earn money while you shop from your favorite brands. Join the waitlist for exclusive early access!" />
+  <meta property="og:image" content="https://cashvertz.com/og-image.jpg" />
+  <meta property="og:site_name" content="Cashvertz" />
+  <meta property="og:locale" content="en_US" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://cashvertz.com/" />
+  <meta property="twitter:title" content="Cashvertz - Earn While You Shop" />
+  <meta property="twitter:description"
+    content="Revolutionary cashback shopping platform launching October 21, 2025. Earn money while you shop from your favorite brands. Join the waitlist for exclusive early access!" />
+  <meta property="twitter:image" content="https://cashvertz.com/og-image.jpg" />
+  <meta property="twitter:creator" content="@cashvertz" />
+  <meta property="twitter:site" content="@cashvertz" />
+
+  <!-- Additional SEO Meta Tags -->
+  <meta name="theme-color" content="#66FFB2" />
+  <meta name="msapplication-TileColor" content="#66FFB2" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="Cashvertz" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://cashvertz.com/" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <!-- Preconnect to external domains for performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+  <!-- Structured Data for SEO -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Cashvertz",
+      "url": "https://cashvertz.com",
+      "logo": "https://cashvertz.com/logo.png",
+      "description": "Revolutionary cashback shopping platform that helps users earn money while shopping from their favorite brands.",
+      "foundingDate": "2025",
+      "sameAs": [
+        "https://www.instagram.com/cashvertz",
+        "https://www.linkedin.com/company/cashvertz/",
+        "https://chat.whatsapp.com/LOcskbkvq5PCaZNHoJAoex"
+      ],
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "customer service",
+        "email": "support@cashvertz.com"
+      }
+    }
+    </script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
