Update ComingSoon component: Revise header and subheader text to reflect new branding and messaging, enhancing user anticipation for the website launch.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
-  <title>Cashvertz - Earn While You Shop</title>
-  <meta name="title" content="Cashvertz - Earn While You Shop" />
+  <title>CashVertz | Cashback Shopping, Campaigns & Loot Offers</title>
+  <meta name="title" content="CashVertz | Cashback Shopping, Campaigns & Loot Offers" />
   <meta name="description"
-    content="Revolutionary cashback shopping platform launching October 21, 2025. Earn money while you shop from your favorite brands. Join the waitlist for exclusive early access!" />
+    content="CashVertz is your hub for cashback shopping, limited-time campaigns, loot drops, and Amazon voucher events. Join the waitlist and earn while you shop." />
   <meta name="keywords"
-    content="cashback, shopping, earn money, rewards, online shopping, cashback app, shopping rewards, money back, discount shopping, Cashvertz" />
+    content="cashback, cashback shopping, cashback campaigns, loot offers, amazon voucher, voucher campaign, earn while you shop, rewards, shopping rewards, discount shopping, cashvertz" />
   <meta name="author" content="Cashvertz" />
   <meta name="robots" content="index, follow" />
   <meta name="language" content="English" />
@@ -20,19 +20,20 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://cashvertz.com/" />
-  <meta property="og:title" content="Cashvertz - Earn While You Shop" />
+  <meta property="og:title" content="CashVertz — Cashback Shopping, Campaigns & Loot Offers" />
   <meta property="og:description"
-    content="Revolutionary cashback shopping platform launching October 21, 2025. Earn money while you shop from your favorite brands. Join the waitlist for exclusive early access!" />
+    content="Cashback shopping meets limited-time campaigns and loot drops. Join CashVertz and earn while you shop." />
   <meta property="og:image" content="https://cashvertz.com/og-image.jpg" />
+  <meta property="og:image:alt" content="CashVertz — Earn While You Shop with cashback campaigns and loot offers" />
   <meta property="og:site_name" content="Cashvertz" />
   <meta property="og:locale" content="en_US" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://cashvertz.com/" />
-  <meta property="twitter:title" content="Cashvertz - Earn While You Shop" />
+  <meta property="twitter:title" content="CashVertz — Cashback Shopping & Loot Offers" />
   <meta property="twitter:description"
-    content="Revolutionary cashback shopping platform launching October 21, 2025. Earn money while you shop from your favorite brands. Join the waitlist for exclusive early access!" />
+    content="Join CashVertz for cashback shopping, campaigns and loot drops. Earn while you shop." />
   <meta property="twitter:image" content="https://cashvertz.com/og-image.jpg" />
   <meta property="twitter:creator" content="@cashvertz" />
   <meta property="twitter:site" content="@cashvertz" />
